otto - compare classifiers

--- a/ipython_notebooks/Kaggle-Otto_Product_Classification.ipynb
+++ b/ipython_notebooks/Kaggle-Otto_Product_Classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -154,7 +154,7 @@
        "[3 rows x 95 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -308,7 +308,7 @@
        "[3 rows x 94 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -335,210 +335,103 @@
     "    labels = le.transform(data.target) \n",
     "    classes = list(le.classes_) \n",
     "    test_ids = test.id\n",
-    "    \n",
+    "    Y = train['target']\n",
     "    train.drop(['id', 'target'], axis=1, inplace=True)\n",
     "    test.drop(['id'], axis=1, inplace=True)\n",
+    "    X = train\n",
     "    \n",
-    "    return train, test, labels, classes, test_ids"
+    "    return train, test, labels, classes, test_ids, X, Y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "train, test, labels, classes, test_ids, X, Y = label_and_clean(train, test)\n",
+    "#test.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn import cross_validation\n",
+    "test_size = 0.33\n",
+    "train_test_seed = 7\n",
+    "X_train, X_test, y_train, y_test = cross_validation.train_test_split(X, Y, test_size=test_size, random_state=train_test_seed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>feat_1</th>\n",
-       "      <th>feat_2</th>\n",
-       "      <th>feat_3</th>\n",
-       "      <th>feat_4</th>\n",
-       "      <th>feat_5</th>\n",
-       "      <th>feat_6</th>\n",
-       "      <th>feat_7</th>\n",
-       "      <th>feat_8</th>\n",
-       "      <th>feat_9</th>\n",
-       "      <th>feat_10</th>\n",
-       "      <th>...</th>\n",
-       "      <th>feat_84</th>\n",
-       "      <th>feat_85</th>\n",
-       "      <th>feat_86</th>\n",
-       "      <th>feat_87</th>\n",
-       "      <th>feat_88</th>\n",
-       "      <th>feat_89</th>\n",
-       "      <th>feat_90</th>\n",
-       "      <th>feat_91</th>\n",
-       "      <th>feat_92</th>\n",
-       "      <th>feat_93</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>22</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 93 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   feat_1  feat_2  feat_3  feat_4  feat_5  feat_6  feat_7  feat_8  feat_9  \\\n",
-       "0       1       0       0       0       0       0       0       0       0   \n",
-       "1       0       0       0       0       0       0       0       1       0   \n",
-       "2       0       0       0       0       0       0       0       1       0   \n",
-       "3       1       0       0       1       6       1       5       0       0   \n",
-       "4       0       0       0       0       0       0       0       0       0   \n",
-       "\n",
-       "   feat_10   ...     feat_84  feat_85  feat_86  feat_87  feat_88  feat_89  \\\n",
-       "0        0   ...           0        1        0        0        0        0   \n",
-       "1        0   ...           0        0        0        0        0        0   \n",
-       "2        0   ...           0        0        0        0        0        0   \n",
-       "3        1   ...          22        0        1        2        0        0   \n",
-       "4        0   ...           0        1        0        0        0        0   \n",
-       "\n",
-       "   feat_90  feat_91  feat_92  feat_93  \n",
-       "0        0        0        0        0  \n",
-       "1        0        0        0        0  \n",
-       "2        0        0        0        0  \n",
-       "3        0        0        0        0  \n",
-       "4        1        0        0        0  \n",
-       "\n",
-       "[5 rows x 93 columns]"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==============================\n",
+      "KNeighborsClassifier\n",
+      "****Results****\n"
+     ]
     }
    ],
    "source": [
-    "train, test, labels, classes, test_ids = label_and_clean(train, test)\n",
-    "train.head(5)"
+    "from sklearn.metrics import accuracy_score, log_loss\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.svm import SVC, LinearSVC, NuSVC\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier, AdaBoostClassifier, GradientBoostingClassifier\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
+    "from sklearn.discriminant_analysis import QuadraticDiscriminantAnalysis\n",
+    "\n",
+    "classifiers = [\n",
+    "    KNeighborsClassifier(3),\n",
+    "    SVC(kernel=\"rbf\", C=0.025, probability=True),\n",
+    "    NuSVC(probability=True),\n",
+    "    DecisionTreeClassifier(),\n",
+    "    RandomForestClassifier(),\n",
+    "    AdaBoostClassifier(),\n",
+    "    GradientBoostingClassifier(),\n",
+    "    GaussianNB(),\n",
+    "    LinearDiscriminantAnalysis(),\n",
+    "    QuadraticDiscriminantAnalysis()]\n",
+    "\n",
+    "# Logging for Visual Comparison\n",
+    "log_cols=[\"Classifier\", \"Accuracy\", \"Log Loss\"]\n",
+    "log = pd.DataFrame(columns=log_cols)\n",
+    "\n",
+    "for clf in classifiers:\n",
+    "    clf.fit(X_train, y_train)\n",
+    "    name = clf.__class__.__name__\n",
+    "    \n",
+    "    print(\"=\"*30)\n",
+    "    print(name)\n",
+    "    \n",
+    "    print('****Results****')\n",
+    "    train_predictions = clf.predict(X_test)\n",
+    "    acc = accuracy_score(y_test, train_predictions)\n",
+    "    print(\"Accuracy: {:.4%}\".format(acc))\n",
+    "    \n",
+    "    train_predictions = clf.predict_proba(X_test)\n",
+    "    ll = log_loss(y_test, train_predictions)\n",
+    "    print(\"Log Loss: {}\".format(ll))\n",
+    "    \n",
+    "    log_entry = pd.DataFrame([[name, acc*100, ll]], columns=log_cols)\n",
+    "    log = log.append(log_entry)\n",
+    "    \n",
+    "print(\"=\"*30)"
    ]
   }
  ],
