fix issue with reference to data object

--- a/ipython_notebooks/Kaggle-Otto_Product_Classification.ipynb
+++ b/ipython_notebooks/Kaggle-Otto_Product_Classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -154,7 +154,7 @@
        "[3 rows x 95 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -308,7 +308,7 @@
        "[3 rows x 94 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -331,8 +331,8 @@
     "#Labels the target column, drop the id and target columns\n",
     "def label_and_clean(train, test):\n",
     "    le = LabelEncoder()\n",
-    "    le.fit(data.target)\n",
-    "    labels = le.transform(data.target) \n",
+    "    le.fit(train.target)\n",
+    "    labels = le.transform(train.target) \n",
     "    classes = list(le.classes_) \n",
     "    test_ids = test.id\n",
     "    Y = train['target']\n",
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -441,18 +441,6 @@
    "display_name": "Python [Root]",
    "language": "python",
    "name": "Python [Root]"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
   }
  },
  "nbformat": 4,
