added comment regarding best classifier

--- a/ipython_notebooks/Kaggle-Otto_Product_Classification.ipynb
+++ b/ipython_notebooks/Kaggle-Otto_Product_Classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -154,7 +154,7 @@
        "[3 rows x 95 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -308,7 +308,7 @@
        "[3 rows x 94 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -382,7 +382,50 @@
      "text": [
       "==============================\n",
       "KNeighborsClassifier\n",
-      "****Results****\n"
+      "****Results****\n",
+      "Accuracy: 76.7434%\n",
+      "Log Loss: 3.73999425468\n",
+      "==============================\n",
+      "SVC\n",
+      "****Results****\n",
+      "Accuracy: 60.9647%\n",
+      "Log Loss: 0.878790070614\n",
+      "==============================\n",
+      "DecisionTreeClassifier\n",
+      "****Results****\n",
+      "Accuracy: 70.4114%\n",
+      "Log Loss: 10.2195537208\n",
+      "==============================\n",
+      "RandomForestClassifier\n",
+      "****Results****\n",
+      "Accuracy: 77.3213%\n",
+      "Log Loss: 1.58595466143\n",
+      "==============================\n",
+      "AdaBoostClassifier\n",
+      "****Results****\n",
+      "Accuracy: 69.2311%\n",
+      "Log Loss: 2.00807854076\n",
+      "==============================\n",
+      "GradientBoostingClassifier\n",
+      "****Results****\n",
+      "Accuracy: 78.3741%\n",
+      "Log Loss: 0.60606396774\n",
+      "==============================\n",
+      "GaussianNB\n",
+      "****Results****\n",
+      "Accuracy: 60.8766%\n",
+      "Log Loss: 7.44410252036\n",
+      "==============================\n",
+      "LinearDiscriminantAnalysis\n",
+      "****Results****\n",
+      "Accuracy: 70.1861%\n",
+      "Log Loss: 0.911911306357\n",
+      "==============================\n",
+      "QuadraticDiscriminantAnalysis\n",
+      "****Results****\n",
+      "Accuracy: 66.2096%\n",
+      "Log Loss: 6.06503537714\n",
+      "==============================\n"
      ]
     }
    ],
@@ -399,11 +442,11 @@
     "classifiers = [\n",
     "    KNeighborsClassifier(3),\n",
     "    SVC(kernel=\"rbf\", C=0.025, probability=True),\n",
-    "    NuSVC(probability=True),\n",
+    "    #NuSVC(probability=True),\n",
     "    DecisionTreeClassifier(),\n",
     "    RandomForestClassifier(),\n",
     "    AdaBoostClassifier(),\n",
-    "    GradientBoostingClassifier(),\n",
+    "    GradientBoostingClassifier(), #78%\n",
     "    GaussianNB(),\n",
     "    LinearDiscriminantAnalysis(),\n",
     "    QuadraticDiscriminantAnalysis()]\n",
@@ -441,6 +484,18 @@
    "display_name": "Python [Root]",
    "language": "python",
    "name": "Python [Root]"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
