--- a/ipython_notebooks/Kaggle-Otto_Product_Classification.ipynb
+++ b/ipython_notebooks/Kaggle-Otto_Product_Classification.ipynb
@@ -476,6 +476,17 @@
     "    \n",
     "print(\"=\"*30)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#try xgboost here"
+   ]
   }
  ],
  "metadata": {
