--- a/ipython_notebooks/Kaggle-Otto_Product_Classification.ipynb
+++ b/ipython_notebooks/Kaggle-Otto_Product_Classification.ipynb
@@ -512,7 +512,8 @@
    },
    "outputs": [],
    "source": [
-    "#try xgboost here"
+    "#try xgboost here\n",
+    "#able to do this on windows?"
    ]
   }
  ],
