--- a/ipython_notebooks/Kaggle-Otto_Product_Classification.ipynb
+++ b/ipython_notebooks/Kaggle-Otto_Product_Classification.ipynb
@@ -515,6 +515,17 @@
     "#try xgboost here\n",
     "#able to do this on windows?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#persist to file system or mongodb here"
+   ]
   }
  ],
  "metadata": {
